--- a/index.html
+++ b/index.html
@@ -1,34 +1,8 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pexmake</title>
-    <meta name="description" content="Pexmake" />
-    <meta name="author" content="PmkExpert" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="content">
-        <h1>Pexmake</h1>
-
-        <div class="games-content">
-          <h2>Games:</h2>
-          <a
-            target="_blank"
-            href="https://pmkexpert.github.io/"
-            >Minimal Slide</a
-          >
-        </div>
-
-        <div class="contact-content">
-          <h3>Contact me at:</h3>
-          <a href="mailto:pexmake@gmail.com"
-            >pexmake@gmail.com</a
-          >
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+<!doctype html>
+        <html lang="en">
+          <head>
+            <meta charset="utf-8">
+            <link rel="stylesheet" href="./css/style.css">
+          </head>
+          <body><body id="i9mj"><div class="gjs-row" id="irnc"><div class="gjs-cell" id="ijbi"><i id="ii1g">Pexmake</i></div></div><div class="gjs-row" id="iptj"><div class="gjs-cell"><div id="idk8"><b>Games:</b><br/></div></div><div class="gjs-cell"><div id="iec3u"><a href="" id="iyxi6">https://pmkexpert.itch.io/minimal-slide</a></div></div></div><div class="gjs-row" id="ihour"><div class="gjs-cell"><div id="ixxqa"><b>Contact me at:</b><br/></div></div><div class="gjs-cell"><div id="i4xpx"><a href="" id="iueb8">pexmake@gmail.com</a></div></div></div></body></body>
+        </html>
