--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
           </head>
-          <body><body id="i9mj"><div class="gjs-row" id="irnc"><div class="gjs-cell" id="ijbi"><i id="ii1g">Pexmake</i></div></div><div class="gjs-row" id="iptj"><div class="gjs-cell"><div id="idk8"><b>Games:</b><br/></div></div><div class="gjs-cell"><div id="iec3u"><a href="" id="iyxi6">https://pmkexpert.itch.io/minimal-slide</a></div></div></div><div class="gjs-row" id="ihour"><div class="gjs-cell"><div id="ixxqa"><b>Contact me at:</b><br/></div></div><div class="gjs-cell"><div id="i4xpx"><a href="" id="iueb8">pexmake@gmail.com</a></div></div></div></body></body>
+          <body><body id="i9mj"><div class="gjs-row" id="irnc"><div class="gjs-cell" id="ijbi"><i id="ii1g">Pexmake</i></div></div><div class="gjs-row" id="iptj"><div class="gjs-cell"><div id="idk8"><b>Games:</b><br/></div></div><div class="gjs-cell"><div id="iec3u"><a href="https://pmkexpert.itch.io/minimal-slide" id="iyxi6">Minimal Slide</a></div></div></div><div class="gjs-row" id="ihour"><div class="gjs-cell"><div id="ixxqa"><b>Contact me at:</b><br/></div></div><div class="gjs-cell"><div id="i4xpx"><a href="mailto:pexmake@gmail.com" id="iueb8">pexmake@gmail.com</a></div></div></div></body></body>
         </html>
