--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="gjs-cell">
 				  <div id="iec3u">
-					<a href="https://pmkexpert.itch.io/minimal-slide" id="iyxi6">Minimal Slide</a>
+					<a href="https://pmkexpert.github.io/minimal_slide/" id="iyxi6">Minimal Slide</a>
 				  </div>
 				</div>
 			  </div>
