--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="style.css">
+		  <meta name="google-site-verification" content="ASH14BYNrotlRnQKY4aTN3igtoNKMPvrfVUMD9EMQPk" />
           </head>
 			<body id="i9mj">
 			  <div class="gjs-row" id="irnc">
